#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psddldata
#------------------------------------------------------------------------

Package author: Andrei Salnikov

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-04-11
2013-03-10 Andy Salnikov
- small fixes to schema for HDF5 generator

Tag: V00-04-10
2013-03-04 Andy Salnikov
- fixing type id for quartz.Config class

Tag: V00-04-09
2013-03-04 Andy Salnikov
- update DDL for cspad and acqiris to work with HDF5 generator

Tag: V00-04-08
2013-02-27 Andy Salnikov
- small changes to control.ddl.xml to make it usable for HDF5 generator

Tag: V00-04-07
2013-02-26 Andy Salnikov
- couple of classes in cspad and cspad2x2 packages made value-type
- Evr.PulseConfig auto constuctor replaced with specific arguments
  to take parameters retuurned from non-accessor methods

Tag: V00-04-06
2013-02-26 Andy Salnikov
- few fixes to make it work better with HDF5 generator

Tag: V00-04-05
2013-02-12 Andy Salnikov
- removed shape method for pvName

Tag: V00-04-04
2013-02-06 Andy Salnikov
- in pnccd moved FramesV1 below FulFrameV1. Python bindings use this
  order to find data in event for given type_id, because those classes
  have the same type_id FramesV1 was found first. Preferred for Python is 
  to return FullFrame so it has to come first.

Tag: V00-04-03
2013-02-05 Andy Salnikov
- update usdusb.DataV1 definition

Tag: V00-04-02
2013-02-05 Andy Salnikov
- upgrading to pdsdata V06-01-04
- new classes princeton.ConfigV5, princeton.FrameV2

Tag: V00-04-01
2013-02-04 Andy Salnikov
- upgrading to pdsdata V06-01-02
- new classes cspad2x2.ConfigV2 and cspad2x2.ConfigV2QuadReg
- method ipimb.ConfigV{1,2}.diodeGain() renamed to capacitorValue()

Tag: V00-04-00
2013-01-30 Andy Salnikov
- switching to const ndarrays everywhere

Tag: V00-03-16
2013-01-28 Andy Salnikov