@@ -76,6 +76,10 @@
 
 
             <ctor>
+                Default constructor
+                <tag name="inline"/>
+            </ctor>
+            <ctor>
                 Constructor which takes values for every attribute
                 <tag name="inline"/>
                 <tag name="auto"/>
@@ -148,6 +152,10 @@
 
 
             <ctor>
+                Default constructor
+                <tag name="inline"/>
+            </ctor>
+            <ctor>
                 Constructor which takes values for every attribute
                 <tag name="inline"/>
                 <tag name="auto"/>
@@ -172,6 +180,10 @@
             </attribute>
 
 
+            <ctor>
+                Default constructor
+                <tag name="inline"/>
+            </ctor>
             <ctor>
                 Constructor which takes values for every attribute
                 <tag name="inline"/>
