@@ -11,6 +11,10 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-04-12
+2013-03-12 Andy Salnikov
+- add default ctors to lusi value types
+
 Tag: V00-04-11
 2013-03-10 Andy Salnikov
 - small fixes to schema for HDF5 generator
